Bug 325547 - crash in spellchecker
Summary: crash in spellchecker
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (show other bugs)
Version: 2.7.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-10-02 12:23 UTC by Carlos Valcarcel
Modified: 2013-11-22 10:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Valcarcel 2013-10-02 12:23:04 UTC
Application: calligrawords (2.7.1)
KDE Platform Version: 4.11.1
Qt Version: 4.8.4
Operating System: Linux 3.8.0-30-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:
I was typing as fast I usually do when I write my journal pages. I typically edit as I go, but much less than usual as I usually go back to edit. Also, I notice that Calligra visual feedback on keystrokes slows down as i get to the end of page 2 and really slows down at page 3. So much so that I can type faster than it is displaying what I am doing. Probably not related.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Calligra Words (calligrawords), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe008bf57c0 (LWP 12829))]

Thread 3 (Thread 0x7fdfe27a2700 (LWP 12830)):
#0  0x00007fe00646d3cd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fe0035b51dc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe0035b5304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe00789f036 in QEventDispatcherGlib::processEvents (this=0x7fdfdc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fe00786f38f in QEventLoop::processEvents (this=this@entry=0x7fdfe27a1d90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe00786f618 in QEventLoop::exec (this=this@entry=0x7fdfe27a1d90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fe007771410 in QThread::exec (this=this@entry=0x159ba80) at thread/qthread.cpp:542
#7  0x00007fe007850edf in QInotifyFileSystemWatcherEngine::run (this=0x159ba80) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007fe007773bec in QThreadPrivate::start (arg=0x159ba80) at thread/qthread_unix.cpp:338
#9  0x00007fe003c89f8e in start_thread (arg=0x7fdfe27a2700) at pthread_create.c:311
#10 0x00007fe006479e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7fdfe0e93700 (LWP 12836)):
#0  0x00007fffd3ad3af7 in ?? ()
#1  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe008bf57c0 (LWP 12829)):
[KCrash Handler]
#6  QFragmentMapData<QTextFragmentData>::next (this=this@entry=0x3aabc10, n=12845530) at ../../include/QtGui/private/../../../src/gui/text/qfragmentmap_p.h:298
#7  0x00007fe006e8a0f3 in next (n=<optimized out>, this=0x3aabc10) at ../../include/QtGui/private/../../../src/gui/text/qfragmentmap_p.h:862
#8  QTextBlock::iterator::fragment (this=this@entry=0x7fffd3a82be0) at text/qtextobject.cpp:1522
#9  0x00007fdfd9fcd571 in BgSpellCheck::fetchMoreText (this=0x2f1c9a0) at /build/buildd/calligra-2.7.1/plugins/textediting/spellcheck/BgSpellCheck.cpp:108
#10 0x00007fe007d5d28d in Sonnet::BackgroundChecker::slotEngineDone (this=0x2f1c9a0) at ../../kdecore/sonnet/backgroundchecker.cpp:143
#11 0x00007fe0078850ef in QMetaObject::activate (sender=sender@entry=0x2bfa1c0, m=m@entry=0x7fe008081f80 <Sonnet::BackgroundEngine::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#12 0x00007fe007d5d6f3 in Sonnet::BackgroundEngine::done (this=this@entry=0x2bfa1c0) at ./backgroundengine_p.moc:112
#13 0x00007fe007d5d758 in Sonnet::BackgroundEngine::checkNext (this=0x2bfa1c0) at ../../kdecore/sonnet/backgroundengine.cpp:92
#14 0x00007fe00788a5be in QObject::event (this=0x2bfa1c0, e=<optimized out>) at kernel/qobject.cpp:1194
#15 0x00007fe006c168ec in QApplicationPrivate::notify_helper (this=this@entry=0x154ff90, receiver=receiver@entry=0x2bfa1c0, e=e@entry=0x4006eb0) at kernel/qapplication.cpp:4567
#16 0x00007fe006c1925b in QApplication::notify (this=0x7fffd3a83740, receiver=receiver@entry=0x2bfa1c0, e=e@entry=0x4006eb0) at kernel/qapplication.cpp:4428
#17 0x00007fdff34dd9e8 in KoApplication::notify (this=<optimized out>, receiver=0x2bfa1c0, event=0x4006eb0) at /build/buildd/calligra-2.7.1/libs/main/KoApplication.cpp:556
#18 0x00007fe00787063e in QCoreApplication::notifyInternal (this=0x7fffd3a83740, receiver=receiver@entry=0x2bfa1c0, event=event@entry=0x4006eb0) at kernel/qcoreapplication.cpp:946
#19 0x00007fe007874171 in sendEvent (event=0x4006eb0, receiver=0x2bfa1c0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x13ee150) at kernel/qcoreapplication.cpp:1570
#21 0x00007fe0078744a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#22 0x00007fe00789ee83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#23 postEventSourceDispatch (s=0x1550460) at kernel/qeventdispatcher_glib.cpp:279
#24 0x00007fe0035b4f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007fe0035b5248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007fe0035b5304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007fe00789f016 in QEventDispatcherGlib::processEvents (this=0x13f0670, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#28 0x00007fe006cbc13e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007fe00786f38f in QEventLoop::processEvents (this=this@entry=0x7fffd3a836b0, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007fe00786f618 in QEventLoop::exec (this=this@entry=0x7fffd3a836b0, flags=...) at kernel/qeventloop.cpp:204
#31 0x00007fe007874cf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#32 0x00007fe006c14ffc in QApplication::exec () at kernel/qapplication.cpp:3828
#33 0x00007fdff37d3c95 in kdemain (argc=<optimized out>, argv=0x1421510) at /build/buildd/calligra-2.7.1/words/app/main.cpp:43
#34 0x00000000004084ea in launch (argc=argc@entry=1, _name=_name@entry=0x1492e98 "/usr/bin/calligrawords", args=args@entry=0x1492eaf "\001", cwd=cwd@entry=0x0, envc=envc@entry=1, envs=<optimized out>, envs@entry=0x1492eb7 "DISPLAY=:0", reset_env=false, tty=tty@entry=0x0, avoid_loops=false, startup_id_str=startup_id_str@entry=0x1492eca "colossus;1380681146;620108;1999_TIME747092104") at ../../kinit/kinit.cpp:738
#35 0x00000000004095fb in handle_launcher_request (sock=8, who=<optimized out>) at ../../kinit/kinit.cpp:1230
#36 0x0000000000409c40 in handle_requests (waitForPid=waitForPid@entry=0) at ../../kinit/kinit.cpp:1423
#37 0x00000000004054f7 in main (argc=4, argv=<optimized out>, envp=0x7fffd3a84520) at ../../kinit/kinit.cpp:1911

Reported using DrKonqi
Comment 1 Camilla Boemann 2013-10-20 23:19:16 UTC
are you writing at the end of the document when it crashes?
Comment 2 Carlos Valcarcel 2013-10-20 23:46:29 UTC
I was about to answer no, but the fact is that i usually correct as i go 
so yes I am at the end of the document when this happens.

On 10/20/2013 07:19 PM, Camilla Boemann wrote:
> https://bugs.kde.org/show_bug.cgi?id=325547
>
> --- Comment #1 from Camilla Boemann <cbo@boemann.dk> ---
> are you writing at the end of the document when it crashes?
>
Comment 3 Camilla Boemann 2013-11-10 13:37:24 UTC
Git commit b60307ae767a10b8a2c764b28c26fa01866aa6e9 by C. Boemann.
Committed on 10/11/2013 at 13:36.
Pushed by boemann into branch 'master'.

Try and avoid a reported crash

M  +1    -1    plugins/textediting/spellcheck/BgSpellCheck.cpp

http://commits.kde.org/calligra/b60307ae767a10b8a2c764b28c26fa01866aa6e9
Comment 4 Halla Rempt 2013-11-22 10:57:05 UTC
Git commit 219707ae362ae0629465e161f0e69e3260c16513 by Boudewijn Rempt, on behalf of C. Boemann.
Committed on 10/11/2013 at 13:36.
Pushed by rempt into branch 'calligra/2.7'.

Try and avoid a reported crash

M  +1    -1    plugins/textediting/spellcheck/BgSpellCheck.cpp

http://commits.kde.org/calligra/219707ae362ae0629465e161f0e69e3260c16513