Try and avoid a reported crash

BUG: 325547